--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"engines": {
-		"node":">=18.18.0 <19.0.0"
+		"npm":"11.1.0",
+		"node":"v22.14.0"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
