--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.3.0",
-    "astro": "^5.5.4"
+    "@tailwindcss/vite": "^4.0.15",
+    "astro": "^5.5.4",
+    "tailwindcss": "^4.0.15"
   }
 }
