--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^12.3.0",
+    "@astrojs/cloudflare": "^9.2.1",
     "@tailwindcss/vite": "^4.0.15",
     "astro": "^5.5.4",
     "tailwindcss": "^4.0.15"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
