--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^9.2.1",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/cloudflare": "^12.3.0",
+    "@astrojs/tailwind": "^6.0.1",
     "@tailwindcss/vite": "^4.0.15",
-    "astro": "^4.16.18",
-    "tailwindcss": "^4.0.15"
+    "astro": "^5.5.4",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16"
