--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.8.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16"
+    "@tailwindcss/typography": "^0.5.16",
+    "js-yaml": "^4.1.0"
   }
 }
