--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/cloudflare": "^12.3.0",
+    "@astrojs/svelte": "^7.0.7",
     "@astrojs/tailwind": "^6.0.1",
     "@tailwindcss/vite": "^4.0.15",
     "astro": "^5.5.4",
+    "svelte": "^5.25.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2"
   },
