--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@astrojs/cloudflare": "^12.3.0",
     "@astrojs/svelte": "^7.0.7",
     "@astrojs/tailwind": "^6.0.1",
+    "@pagefind/default-ui": "^1.3.0",
     "@tailwindcss/vite": "^4.0.15",
     "astro": "^5.5.4",
+    "astro-pagefind": "^1.8.3",
     "svelte": "^5.25.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2"
