--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "prebuild": "node scripts/generate-og-images.js",
+    "build": "npm run astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/cloudflare": "^9.2.1",
+    "@astrojs/sitemap": "^3.3.0",
     "@astrojs/svelte": "^7.0.7",
     "@astrojs/tailwind": "^6.0.1",
     "@pagefind/default-ui": "^1.3.0",
     "@tailwindcss/vite": "^4.0.15",
+    "@vercel/og": "^0.6.5",
     "astro": "^5.5.4",
     "astro-pagefind": "^1.8.3",
     "astro-seo": "^0.8.4",
+    "satori": "^0.12.1",
+    "satori-html": "^0.3.2",
+    "sharp": "^0.33.5",
     "svelte": "^5.25.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2"
