Update Github Action

--- a/.github/workflows/updatepr.yml
+++ b/.github/workflows/updatepr.yml
@@ -33,10 +33,15 @@ jobs:
       
       - name: Update PR information in changed initiative files
         if: steps.changed-files.outputs.all_changed_files != ''
+        env:
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          PR_TITLE: ${{ github.event.pull_request.title }}
+          PR_AUTHOR: ${{ github.event.pull_request.user.login }}
+          PR_MERGED_AT: ${{ github.event.pull_request.merged_at }}
         run: |
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             echo "Processing $file..."
-            node scripts/add-pr-info.js "$file" ${{ github.event.pull_request.number }} "${{ github.event.pull_request.title }}" "${{ github.event.pull_request.user.login }}" "${{ github.event.pull_request.merged_at }}"
+            node scripts/add-pr-info.js "$file"
           done
       
       - name: Commit and push changes
